dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/ltng_UnifiedLinkScheme__c.object-meta.xml
<CustomObject>
    <description>Object that codifies a Unified Link / how it behaves and whom can see it.</description>
    <label>Unified Link Scheme</label>
    <nameField>
        <label>Unified Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Link Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>