dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/CustomFieldUsingRedirector__c.field-meta.xml
<CustomField>
    <fullName>CustomFieldUsingRedirector__c</fullName>
    <formula>HYPERLINK(

  /* URL */
  &#39;/apex/ltng_unifiedlinksportal?redirType=SObject&amp;redirParams={"id": "&#39; + Id + &#39;"}&#39;,

  /* Friendly Name */
  &#39;Link to this Record&#39;,

  /* Target */
  &#39;_blank&#39;
)</formula>
    <inlineHelpText>Link to this record using the Unified Link Redirector</inlineHelpText>
    <label>Custom Field using Redirector</label>
    <type>Text</type>
</CustomField>