dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/CustomFieldUsingRedirectorSubstitute__c.field-meta.xml
<CustomField>
    <fullName>CustomFieldUsingRedirectorSubstitute__c</fullName>
    <description>Uses a Substitute instead</description>
    <formula>HYPERLINK(

  /* URL */
  SUBSTITUTE( &#39;/apex/ltng_unifiedlinksportal?redirType=SObject&amp;redirParams=%7B%22id%22%3A+%22:ID:%22%7D&#39;, &#39;:ID:&#39;, Id),

  /* Friendly Name */
  &#39;Link to this Record&#39;,

  /* Target */
  &#39;_blank&#39;
)</formula>
    <inlineHelpText>Link to this record using the Unified Link Redirector</inlineHelpText>
    <label>Custom Field using Redirector Substitute</label>
    <type>Text</type>
</CustomField>