dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>(optional) Description is only shown in large contexts</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>