dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/ExampleParamsForDemo__c.field-meta.xml
<CustomField>
    <fullName>ExampleParamsForDemo__c</fullName>
    <description>It is understood that this will only be used during demos, 
but by adding this field to the object, it gives much more flexibility 
for people playing around / giving the demo than using custom metadata/custom settings. 

(As some reference salesforce ids, and must be generated after data loads 
this avoids the needs for complex dependent deployments, etc.)</description>
    <inlineHelpText>Parameters to send for a demo of this URL Scheme</inlineHelpText>
    <label>Example Params for Demo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>