dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/LinkUsingRedirector__c.field-meta.xml
<CustomField>
    <fullName>LinkUsingRedirector__c</fullName>
    <formula>HYPERLINK(

  /* URL */
  &#39;/apex/ltng_unifiedlinksportal?redirType=SObject&amp;redirParams=%7B%20%22id%22%3A%20%22&#39; +  Id + &#39;%22%20%7D&#39;,

  /* Friendly Name */
  &#39;Link to this Record&#39;,

  /* Target */
  &#39;_blank&#39;
)</formula>
    <inlineHelpText>Link to this record using the Unified Link Redirector</inlineHelpText>
    <label>Link using Redirector</label>
    <type>Text</type>
</CustomField>