dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/RedirectionPrompt__c.field-meta.xml
<CustomField>
    <fullName>RedirectionPrompt__c</fullName>
    <inlineHelpText>Descriptive message to provide to the user with the {{FIELD}} replacements.
So they know where they are going.</inlineHelpText>
    <label>Redirection Prompt</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>