dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/UrlSchemeClassic__c.field-meta.xml
<CustomField>
    <fullName>UrlSchemeClassic__c</fullName>
    <inlineHelpText>The URL format for Salesforce Classic with handlebars {{JSON_FIELD}} replacements</inlineHelpText>
    <label>URL Scheme Classic</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>