dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/UrlSchemeLightningExperience__c.field-meta.xml
<CustomField>
    <fullName>UrlSchemeLightningExperience__c</fullName>
    <inlineHelpText>The URL format for Lightning Experience with handlebars {{JSON_FIELD}} replacements</inlineHelpText>
    <label>URL Scheme Lightning Experience</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>