dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/fields/UrlSchemeMobile__c.field-meta.xml
<CustomField>
    <fullName>UrlSchemeMobile__c</fullName>
    <inlineHelpText>The URL format for Mobile with handlebars {{JSON_FIELD}} replacements</inlineHelpText>
    <label>URL Scheme Mobile</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>