dx/force-app/main/default/objects/ltng_UnifiedLinkScheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>